--- a/src/ggrc/assets/stylesheets/_components.scss
+++ b/src/ggrc/assets/stylesheets/_components.scss
@@ -38,3 +38,4 @@
 @import "components/action-toolbar/action-toolbar";
 @import "components/object-tasks/object-tasks";
 @import "components/tasks-counter/tasks-counter";
+@import "components/object-state-toolbar/object-state-toolbar";
