--- a/src/ggrc/assets/mustache/assessments/header.mustache
+++ b/src/ggrc/assets/mustache/assessments/header.mustache
@@ -106,7 +106,8 @@ Copyright (C) 2017 Google Inc.
             </div>
           {{#is_allowed 'update' instance context='for'}}
               {{^if instance.archived}}
-                  <object-state-toolbar {verifiers}="instance.assignees.Verifier"
+                  <object-state-toolbar {{#if is_info_pin}}class="object-state-toolbar__info-pin-state"{{/if}}
+                                        {verifiers}="instance.assignees.Verifier"
                                         {instance}="instance"
                                         (on-state-change)="onStateChange(%event)">
                   </object-state-toolbar>
