--- a/src/ggrc/assets/stylesheets/components/info-pane/_info-pane.scss
+++ b/src/ggrc/assets/stylesheets/components/info-pane/_info-pane.scss
@@ -25,6 +25,10 @@
     padding: 0;
   }
 
+  &__section-title-icon {
+    margin: 0 0 0 8px;
+  }
+
   &__main-content {
     padding-bottom: 28px;
     min-width: 0;
