--- a/src/ggrc/assets/mustache/components/assessment/info-pane/info-pane.mustache
+++ b/src/ggrc/assets/mustache/components/assessment/info-pane/info-pane.mustache
@@ -163,7 +163,7 @@
                   {{#unless isInstanceCompleted}}
                     {{#is_allowed 'update' instance context='for'}}
                       <comment-add-form class="comment-add-form"
-                                      {instance}="instance"
+                                      {instance}="instance" {(is-saving)}="isLoading"
                       ></comment-add-form>
                     {{/is_allowed}}
                   {{/unless}}
