--- a/src/ggrc/assets/stylesheets/_components.scss
+++ b/src/ggrc/assets/stylesheets/_components.scss
@@ -38,6 +38,7 @@
 @import "components/auto-save-form/auto-save-form";
 @import "components/attachment-upload-control/attachment-upload-control";
 @import "components/action-toolbar/action-toolbar";
+@import "components/people-group/people-group";
 @import "components/form/editable-form";
 @import "components/object-tasks/object-tasks";
 @import "components/folder-attachments-list/folder-attachments-list";
