Add extra flag to verify Object Remove is possible

--- a/src/ggrc/assets/mustache/components/object-list-item/editable-document-object-list-item.mustache
+++ b/src/ggrc/assets/mustache/components/object-list-item/editable-document-object-list-item.mustache
@@ -9,9 +9,11 @@
     </div>
     <div class="action-toolbar__controls">
         {{#unless instance.archived}}
-          {{#is_allowed 'update' instance context='for'}}
-            <content></content>
-          {{/is_allowed}}
+          {{#unless document.isDraft}}
+            {{#is_allowed 'update' instance context='for'}}
+              <content></content>
+            {{/is_allowed}}
+          {{/unless}}
         {{/unless}}
     </div>
 </action-toolbar>
