--- a/src/ggrc/assets/stylesheets/components/info-pane/_info-pane.scss
+++ b/src/ggrc/assets/stylesheets/components/info-pane/_info-pane.scss
@@ -23,10 +23,21 @@
     line-height: 28px;
     margin: 0;
     padding: 0;
+    position: relative;
   }
 
   &__section-title-icon {
-    margin: 0 0 0 8px;
+    position: absolute;
+    width: 28px;
+    height: 28px;
+    left: -28px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__section-title-text {
+
   }
 
   &__main-content {
